[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "OpenENDEC"
version = "1.0.0"
description = "A Python library for handling EAS encoding and decoding."
authors = [
    { name = "Your Name or Organization", email = "youremail@example.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    # Example dependencies
    # "numpy >=1.18.0"
]

[optional-dependencies]
dev = [
    "pytest",
    "flake8"
]
